[MAJ] test fix align top

--- a/templates/base/theme/global.css
+++ b/templates/base/theme/global.css
@@ -463,7 +463,7 @@ td.calendar-week {
 }
 
 .progressbar-container .progressbar {
-	height: 13px;
+	height: 14px;
 	background-color: #8ECF67;
 	transition: width .6s ease;
 }
